@@ -165,7 +165,7 @@ abstract class BaseSQLTab extends BaseObjectTab
 		{
 			for (int i = 0; i < columnCount; ++i)
 			{
-				data.put(colDefs[i].getLabel(), rsds.get(i));
+				data.put(colDefs[i].getColumnName(), rsds.get(i));
 			}
 		}
 		return new MapDataSet(data);
